Add reset button and update the plugin to 1.8